<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="348dp"
        android:layout_height="131dp"
        android:layout_marginStart="28dp"
        android:fontFamily="@font/lobster"
        android:text="@string/airlineName"
        android:textAlignment="center"
        android:textColor="@color/myPrimary"
        android:textSize="87sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btnbordershadow"
        android:backgroundTint="@color/my_color"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/btn1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btnbordershadow"
        android:backgroundTint="@color/my_color"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/btn2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cancelReservationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
        app:layout_constraintVertical_bias="0.136" />

    <Button
        android:id="@+id/cancelReservationButton"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btnbordershadow"
        android:backgroundTint="@color/my_color"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/btn3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/manageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelButton"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/manageButton"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btnbordershadow"
        android:backgroundTint="@color/my_color"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/btn4"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelReservationButton" />

</android.support.constraint.ConstraintLayout>